--- a/index.html
+++ b/index.html
@@ -72,6 +72,6 @@
 
          <div class="back-to-top"><i class="fa fa-arrow-up"></i></div>
       </div>
-      <script>"[object Function]"!==Object.prototype.toString.call(window.Promise)&&(window.Promise=null)</script><script src="./lib/jquery/index.js?v=2.1.3"></script><script src="./lib/velocity/velocity.min.js?v=1.2.1"></script><script src="./lib/velocity/velocity.ui.min.js?v=1.2.1"></script><script src="./utils.js?v=7.1.1"></script><script src="./js/motion.js?v=7.1.1"></script><script src="./js/baidu.js?v=7.1.1"></script><script src="./js/schemes/muse.js?v=7.1.1"></script><script src="./js/next-boot.js?v=7.1.1"></script><script>var GUEST=["nick","mail","link"],guest="nick";guest=guest.split(",").filter(function(e){return-1<GUEST.indexOf(e)})</script>
+      <script>"[object Function]"!==Object.prototype.toString.call(window.Promise)&&(window.Promise=null)</script><script src="../lib/jquery/index.js?v=2.1.3"></script><script src="../lib/velocity/velocity.min.js?v=1.2.1"></script><script src="../lib/velocity/velocity.ui.min.js?v=1.2.1"></script><script src="../js/utils.js?v=7.1.1"></script><script src="../js/motion.js?v=7.1.1"></script><script src="../js/baidu.js?v=7.1.1"></script><script src="../js/schemes/muse.js?v=7.1.1"></script><script src="../js/scrollspy.js?v=7.1.1"></script><script src="../js/post-details.js?v=7.1.1"></script><script src="../js/next-boot.js?v=7.1.1"></script>
    </body>
 </html>
