--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                      <li class="menu-item menu-item-home menu-item-active"><a href="./index.html" rel="section"><i class="menu-item-icon fa fa-fw fa-home"></i><br>Home</a></li>
                      <li class="menu-item menu-item-tags"><a href="./tags/index.html" rel="section"><i class="menu-item-icon fa fa-fw fa-tags"></i><br>Tags</a></li>
                      <li class="menu-item menu-item-archives"><a href="./archives/index.html" rel="section"><i class="menu-item-icon fa fa-fw fa-archive"></i><br>Archives</a></li>
+                     <li class="menu-item menu-item-archives"><a href="./about/index.html" rel="section"><i class="menu-item-icon fa fa-fw fa-user"></i><br>About</a></li>
                   </ul>
                </nav>
             </div>
