--- a/大學畢業然後呢.html
+++ b/大學畢業然後呢.html
@@ -215,7 +215,7 @@
                                  以上就是我沒有參加任何社團活動也可以過得很精彩的大學生活，最後附上一張用四年換來的畢業證書。
                                  <br/>
                                  <br/>大學全劇終 ...
-                                 <br/>研究生 to be continued ...
+                                 <br/>研究生 To Be Continued ...
                                  </p>
                                  
                                  <div>
